<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_bar_agenda_user"
        android:icon="@drawable/ic_user_auth"
        yourapp:showAsAction="ifRoom|withText">
    </item>

    <item
        android:id="@+id/action_bar_agenda_sync"
        android:icon="@drawable/ic_action_refresh"
        yourapp:showAsAction="ifRoom|withText"/>

    <!-- <item -->
    <!-- android:id="@+id/action_bar_agenda_color_change" -->
    <!-- android:icon="@drawable/ic_switch_theme" -->
    <!-- android:showAsAction="ifRoom" -->
    <!-- android:title="@string/color_change"> -->


    <!-- <menu> -->

    <group
        android:checkableBehavior="single"
        yourapp:showAsAction="never" >

        <item
            android:id="@+id/action_bar_agenda_blue"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/color_blue"
            yourapp:showAsAction="never"/>

        <item
            android:id="@+id/action_bar_agenda_darkred"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/color_darkred"
            yourapp:showAsAction="never"/>

        <item
            android:id="@+id/action_bar_agenda_pink"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/color_pink"
            yourapp:showAsAction="never"/>

        <item
            android:id="@+id/action_bar_agenda_gold"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/color_gold"
            yourapp:showAsAction="never"/>

        <item
            android:id="@+id/action_bar_agenda_orange"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/color_orange"
            yourapp:showAsAction="never"/>

        <item
            android:id="@+id/action_bar_agenda_green"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/color_green"
            yourapp:showAsAction="never"/>
    </group>
    <!-- </menu> -->
    <!-- </item> -->

</menu>