<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_credits_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backmotif_blue"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:text="@string/activity_credits_dev"
            android:textSize="30sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:text="@string/activity_credits_dev_jeff_nown"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/activity_credits_dev_nico_nown"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:text="@string/activity_credits_desc"
            android:textSize="30sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:text="@string/activity_credits_txt" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:text="@string/activity_credits_contact"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web|email"
            android:gravity="center"
            android:text="@string/activity_credits_dev_nico_mail"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web|email"
            android:gravity="center"
            android:text="@string/activity_credits_dev_jeff_mail"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>